<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_money"
            android:icon="@drawable/ic_menu_money"
            android:title="@string/drawer_money" />
        <item
            android:id="@+id/nav_electricity"
            android:icon="@drawable/ic_electricity"
            android:title="@string/drawer_electricity" />
        <item
            android:id="@+id/nav_bodyweight"
            android:icon="@drawable/ic_menu_body_weight"
            android:title="@string/drawer_body_weight" />
    </group>

    <item android:title="@string/drawer_menu_social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_send" />
        </menu>
    </item>

</menu>
